--- a/reactproject/src/styles/list.css
+++ b/reactproject/src/styles/list.css
@@ -1,3 +1,63 @@
-.title_lists {
+.movies_container{
+  margin: 1% 2% 4% 2%;
+}
+
+.movies_list_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.title_list {
   font-size: 32px;
+  font-weight: bold;
+  margin: 0;
+  padding-left: 2%;
+}
+
+.movie_container {
+
+}
+
+.movie_container_link{
+  border-radius: 5px;
+  box-shadow: 0 1px 15px rgba(0,0,0,0.15);
+  transition: all 0.3s ease-in-out;
+  opacity: 0.7;
+  margin-bottom: 1.5%;
+  margin-left: 2%;
+  width: 12%;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.movie_container_link:hover {
+  box-shadow: 0 5px 25px rgba(0,0,0,0.3);
+  transform: scale(1.02);
+  opacity: 1;
+}
+
+.movie_title {
+  margin: 0;
+  font-size: 0.8em;
+  width: 60%;
+
+}
+
+.movie_poster_container{
+  width: 80%;
+  border-radius: 5px;
+  overflow:hidden;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  margin-top: 2%;
+}
+
+.movie_poster{
+  height: 100%;
+  width: 100%;
 }
