--- a/reactproject/src/styles/moviedetails.css
+++ b/reactproject/src/styles/moviedetails.css
@@ -5,4 +5,41 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+  margin-top: 1%;
+  display: flex;
+  flex-direction: row;
+}
+
+.moviedetails_poster_container{
+  margin: 2% 2% 2% 2%;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.moviedetails_text_container{
+  margin: 2% 2% 2% 2%;
+  width: 60%;
+  height: 100%;
+}
+
+.moviedetails_title, .moviedetails_tagline {
+  text-align: center;
+}
+
+.moviedetails_tagline {
+font-size: 1.5vw
+}
+
+.moviedetails_overview_title{
+  margin-top: 15%;
+  font-size: 1.2vw;
+}
+
+.moviedetails_overview{
+  text-align: justify;
+}
+
+.moviedetails_date_title, .moviedetails_budget_title{
+  font-size: 1.2vw;
+  margin-top: 8%;
 }
