--- a/reactproject/src/styles/login.css
+++ b/reactproject/src/styles/login.css
@@ -1,13 +1,101 @@
 .login_container{
     border-radius: 5px;
     box-shadow: 0 1px 15px rgba(0, 0, 0, 0.15);
-    height: 50vh;
     width: 30%;
     padding: 2% 5% 2% 5%;
     margin: 0 auto;
     text-align: center;
+    margin-top: 3%;
+    background-color: rgb(46, 46, 46);
+}
+
+.formlogin{
+    text-align: center;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    margin-top: 5%;
 }
+
+/* .login_button{
+    width: 60%;
+    margin: 0 auto;
+    padding: 2%;
+    border-radius: 20px;
+    background-color: rgb(167, 0, 0);
+    border: none;
+    color: white;
+} */
+
+.login_background{
+    position: absolute;
+    z-index: -10;
+    opacity: 0.1;
+    width: 100vw;
+}
+
+.newuser_block{
+    border-radius: 5px;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.15);
+    width: 30%;
+    padding: 2% 5% 2% 5%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 8%;
+    background-color: rgb(46, 46, 46);
+    margin-bottom: 6%;
+}
+
+.newuser_button {
+    border: none;
+  background:rgb(167, 0, 0);;
+  color: #fff;
+  padding: 4% 17% 3% 20%;  
+  overflow:hidden;
+  font-size: 1.1vw;
+  border-radius: 10px;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 500ms ease; 
+} 
+
+.newuser_button:before {
+    font-family: FontAwesome;
+    content:"\f008";
+    font-weight: 900;
+    position: absolute;
+    top: 11px;
+    left: -30px;
+    transition: all 300ms ease;
+  }
+
+  .newuser_button:hover:before {
+    left: 25px;
+  }
+
+  .login_button {
+    margin: 0 auto;
+    width: 80%;
+    border: none;
+  background:rgb(167, 0, 0);;
+  color: #fff;
+  padding: 4% 17% 3% 20%;  
+  overflow:hidden;
+  font-size: 1.1vw;
+  border-radius: 10px;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 500ms ease; 
+} 
+
+.login_button:before {
+    font-family: FontAwesome;
+    content:"\f008";
+    font-weight: 900;
+    position: absolute;
+    top: 11px;
+    left: -30px;
+    transition: all 300ms ease;
+  }
+
+  .login_button:hover:before {
+    left: 25px;
+  }
